[package]
name = "py-spy"
version = "0.2.0"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy"
description = "Sampling profiler for Python programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "GPL-3.0"

[dependencies]
clap = "2"
console = "0.7.1"
ctrlc = "3"
indicatif = "0.11"
env_logger = "0.6"
failure = "0.1.1"
goblin = "0.0.21"
lazy_static = "1.1.0"
libc = "0.2.34"
log = "0.4"
regex = "1"
tempdir = "0.3"
tempfile = "3.0.3"
benfred-read-process-memory = "0.1.3"
proc-maps = "0.1"
rouille = "2.2.0"
rust-embed = "3.0.2"
mime_guess = "1.8.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
memmap = "0.7.0"
cpp_demangle = "0.2.12"
remoteprocess = {path="./remoteprocess"}

[target.'cfg(unix)'.dependencies]
termios = "0.3.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}
